# ApareText

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  README.md  REFACTORING_COMPLETE.md  create_example_snippets.py  pyproject.toml  test_abbreviation_detector.py  test_quick.py  test_quick_wins.py
core/: __init__.py  database.py  models.py  snippet_manager.py  template_parser.py
desktop/: __init__.py  abbreviation_detector.py  abbreviation_detector_win32.py  app.py  hotkeys.py  inserter.py  main.py  palette.py  settings_window.py  tray.py
docs/: ARCHITECTURE.md  CAMBIOS_IMPLEMENTADOS.md  DEVELOPMENT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  IDEAS_INNOVADORAS_FASE_3.md  IMAGE_SNIPPETS.md  MEJORAS_FASE_2.md  MEJORAS_PROPUESTAS.md  MEJORAS_UX_UI.md  PACKAGING_ISSUES.md  REFACTORING_2025-10.md  RESUMEN_FINAL.md  SPEC.md  STATUS_ITEMS_3_4_6.md  STEP_11_ABBREVIATION_DETECTOR.md  TEST_RESULTS_ITEM_3.md  USER_GUIDE.md
electron-app/: .electron-builder.env  BUILD_README.md  QUICK_START.md  README.md  electron-builder.json  loading.html  main.js  manager.html  package-lock.json  package.json  palette.html  python_backend.py  settings.html
electron-app/assets/: README.md
electron-app/scripts/: after-build.ps1  before-build.js  before-build.ps1
scripts/: build.ps1  cleanup.ps1  db_maintenance.py  health_check.py
server/: __init__.py  api.py  config.py  main.py  openapi.json  websocket.py
tests/: test_database.py  test_snippet_manager.py  test_snippet_manager_stats.py  test_template_parser.py
